--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/node_modules/
+#to deploy to github pages: git subtree push --prefix public/ origin gh-pages
 #/public/build/
+/node_modules/
 /svg/
 
 .DS_Store
